syntax = "proto3";
package platformprotocol;

import "../../ProtocolProto/player.proto";

// 登录验证
message CVerifyToken {
	string Token = 1;
}

message SVerifyToken {
	
}
