syntax = "proto3";
package platformprotocol;

enum CMD {
    PLATFORM_DEFAULT      = 0;    // 默认

    // 大厅协议
	PLATFORM_VERIFY_TOKEN = 2000; // 登录验证

}
